--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -19,27 +19,16 @@
     <test-fixture id="editor-form-fixture">
         <template>
             <div id="body" style="padding: 0px; margin: 0px;">
-                <template is="dom-bind">
-                    <juicy-tile-simple-editor></juicy-tile-simple-editor>
-                    <juicy-tile-table id="table-0" setup="{{model.setup0}}" defaultsetup="{{model.setupCopy}}">
-                        <div class="tile">tile-00</div>
-                        <div class="tile">tile-01</div>
-                    </juicy-tile-table>
-                    <juicy-tile-table id="table-1" setup="{{model.setup1}}" defaultsetup="{{model.setupCopy}}">
-                        <div class="tile">tile-10</div>
-                        <div class="tile">tile-11</div>
-                    </juicy-tile-table>
-                    <juicy-highlight id="test-highlight"></juicy-highlight>
-                </template>
-                <script>
-                    var script = document._currentScript || document.currentScript;
-                    var tempalte = script.previousElementSibling;
-                    tempalte.model = {
-                        setup0: getJuicyTileSetup(),
-                        setup1: getJuicyTileSetup(),
-                        setupCopy: getJuicyTileSetup()
-                    };
-                </script>
+                <juicy-tile-simple-editor></juicy-tile-simple-editor>
+                <juicy-tile-table id="table-0">
+                    <div class="tile">tile-00</div>
+                    <div class="tile">tile-01</div>
+                </juicy-tile-table>
+                <juicy-tile-table id="table-1">
+                    <div class="tile">tile-10</div>
+                    <div class="tile">tile-11</div>
+                </juicy-tile-table>
+                <juicy-highlight id="test-highlight"></juicy-highlight>
             </div>
         </template>
     </test-fixture>
@@ -60,7 +49,14 @@
                 editor = fix.querySelector("juicy-tile-simple-editor");
                 highlight = fix.querySelector("juicy-highlight#test-highlight");
 
-                tables = Array.prototype.slice.call(fix.querySelectorAll("juicy-tile-table"));
+                tables = fix.querySelectorAll("juicy-tile-table");
+                tables = Array.prototype.slice.call(tables);
+
+                tables.forEach(function (t) {
+                    t.setup = getJuicyTileSetup();
+                    t.defaultsetup = getJuicyTileSetup();
+                });
+
                 tw = new JuicyTileTableWrapper(tables[0]);
 
                 editor.addEventListener("attached", function () {
