--- a/test/setup-test.html
+++ b/test/setup-test.html
@@ -69,8 +69,7 @@
                     .then(function () {
                         var setup = tw.setup(0);
                         expect(setup.width).to.be.equal("50%");
-                        done();
-                    }).catch(done);
+                    }).then(done, done);
             });
 
             it("changes priority of a tile on priority arrow button click", function (done) {
@@ -87,8 +86,7 @@
                         var b = tw.setup(1);
 
                         expect(b.priority).to.be.above(a.priority);
-                        done();
-                    }).catch(done);
+                    }).then(done, done);
             });
 
             it("hides a tile on eye button click", function (done) {
@@ -103,8 +101,7 @@
                     .then(function () {
                         var setup = tw.setup(0);
                         expect(setup.hidden).to.be.true;
-                        done();
-                    }).catch(done);
+                    }).then(done, done);
             });
         });
     </script>
