--- a/test/setup-test.html
+++ b/test/setup-test.html
@@ -22,10 +22,18 @@
                 <juicy-tile-table id="table-0">
                     <div class="tile">tile-00</div>
                     <div class="tile">tile-01</div>
+                    <div class="tile">tile-02</div>
+                    <div class="tile">tile-03</div>
+                    <div class="tile">tile-04</div>
+                    <div class="tile">tile-05</div>
                 </juicy-tile-table>
                 <juicy-tile-table id="table-1">
                     <div class="tile">tile-10</div>
                     <div class="tile">tile-11</div>
+                    <div class="tile">tile-02</div>
+                    <div class="tile">tile-03</div>
+                    <div class="tile">tile-04</div>
+                    <div class="tile">tile-05</div>
                 </juicy-tile-table>
             </div>
         </template>
