Add groups support for POC of predefined layouts

--- a/examples/predefined_forms/simple.html
+++ b/examples/predefined_forms/simple.html
@@ -119,6 +119,7 @@
             <div class="col-left">
                 <juicy-tiles-setup-sync name="juicy-tile-simple-editor/simple.html#left" stored-value="{{model.setupLeft}}" use-localstorage="true"></juicy-tiles-setup-sync>
                 <juicy-tile-table id="st1" setup="{{model.setupLeft}}" defaultsetup="{{model.setupLeftCopy}}">
+                    <juicy-tile-group name="products"></juicy-tile-group>
                     <label for="products/productId">Product ID</label>
                     <input type="text" value="r9-380" id="products/productId"/>
                     <div>
