Update juicy-setup example

--- a/examples/juicy-tile-table/juicy-setup.html
+++ b/examples/juicy-tile-table/juicy-setup.html
@@ -36,8 +36,8 @@
                     }'>
                     <h1>Page title</h1>
                     <p>Some page text</p>
-                    <button type="button" juicy-style="width: 100;">Submit</button>
-                    <button type="button" juicy-style="width: 100;">Cancel</button>
+                    <button type="button" juicy-style="width: 100px;">Submit</button>
+                    <button type="button" juicy-style="width: 100px;">Cancel</button>
                     <p>Some more page text</p>
                 </juicy-tile-table>
             </div>
