Update juicy-setup example
`juicy-style` overwrites entire `defaultTileSetup`

--- a/examples/juicy-tile-table/juicy-setup.html
+++ b/examples/juicy-tile-table/juicy-setup.html
@@ -34,10 +34,10 @@
                         "width": "100%",
                         "widthFlexible": true
                     }'>
-                    <h1>Page title</h1>
+                    <h1 style="margin: 0;">Page title</h1>
                     <p>Some page text</p>
-                    <button type="button" juicy-style="width: 100px;">Submit</button>
-                    <button type="button" juicy-style="width: 100px;">Cancel</button>
+                    <button type="button" juicy-style="width: 100px; height: 1px; heightDynamic: 1;">Submit</button>
+                    <button type="button" juicy-style="width: 100px; height: 1px; heightDynamic: 1;">Cancel</button>
                     <p>Some more page text</p>
                 </juicy-tile-table>
             </div>
