Update juicy-setup example

--- a/examples/juicy-tile-table/juicy-setup.html
+++ b/examples/juicy-tile-table/juicy-setup.html
@@ -36,8 +36,10 @@
                     }'>
                     <h1 style="margin: 0;">Page title</h1>
                     <p>Some page text</p>
-                    <button type="button" juicy-style="width: 100px; height: 1px; heightDynamic: 1;">Submit</button>
-                    <button type="button" juicy-style="width: 100px; height: 1px; heightDynamic: 1;">Cancel</button>
+                    <button type="button" juicy-style="width: 50px; height: 1px; heightDynamic: 1;">Submit</button>
+                    <button type="button" juicy-style="width: 58px; height: 1px; heightDynamic: 1;">Action 1</button>
+                    <button type="button" juicy-style="width: 58px; height: 1px; heightDynamic: 1;">Action 2</button>
+                    <button type="button" juicy-style="width: 50px; height: 1px; heightDynamic: 1;">Cancel</button>
                     <p>Some more page text</p>
                 </juicy-tile-table>
             </div>
