--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -1,4 +1,10 @@
-﻿﻿<link rel="import" href="../../polymer/polymer.html" />
+﻿<!--
+juicy-tile-simple-editor
+@version: 2.0.1
+MIT
+-->
+
+﻿<link rel="import" href="../../polymer/polymer.html" />
 <link rel="import" href="../../iron-localstorage/iron-localstorage.html" />
 <link rel="import" href="../../juicy-highlight/src/juicy-highlight.html" />
 <link rel="import" href="../../juicy-popover/src/juicy-popover.html" />
