--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -929,10 +929,11 @@
                 width: 55px;
                 height: 55px;
                 margin: auto;
-                line-height: 55px;
+                font-size: 12px;
             }
 
             .editor-expert-form .fill-section button.btn {
+                line-height: 55px;
             }
 
             .editor-expert-form .tight-direction-html-source-section {
@@ -1263,6 +1264,9 @@
                 .editor-expert-form .fill-section {
                     width: 50px;
                     height: 50px;
+                }
+
+                .editor-expert-form .fill-section button.btn {
                     line-height: 50px;
                 }
 
